Fixing screen scroll bug on mobile

--- a/static/scripts/style.css
+++ b/static/scripts/style.css
@@ -15,6 +15,9 @@
      margin: auto;
      opacity: 1;
    }
+   .article {
+     margin:0;
+   }
    .not-mobile {
      display:none;
    }
